# bananagrams_solver

./: .gitattributes  .gitignore  README.md  bananagrams_icon.xcf  countries.csv  generate_graphs.ipynb  index.html  package-lock.json  package.json  stats.xlsx  update_dictionary.ipynb  vite.config.ts
.github/workflows/: rust.yml
docs/: .rustc_info.json  .rustdoc_fingerprint.json  index.html
docs/doc/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
docs/doc/bananagrams_solver/: all.html  constant.BOARD_SIZE.html  constant.EMPTY_VALUE.html  constant.MAX_WORD_LENGTH.html  constant.REGULAR_TILES.html  constant.UPPERCASE.html  enum.Direction.html  enum.LetterComparison.html  enum.LetterUsage.html  fn._board_to_string.html  fn.board_to_vec.html  fn.check_filter_after_play.html  fn.check_filter_after_play_later.html  fn.convert_array_to_word.html  fn.convert_word_to_array.html  fn.get_board_overlap.html  fn.get_col_limits.html  fn.get_new_min_max.html  fn.get_playable_words.html  fn.get_previous_idxs.html  fn.get_random_letters.html  fn.get_removable_indices.html  fn.get_row_limits.html  fn.get_settings.html  fn.is_board_valid_horizontal.html  fn.is_board_valid_vertical.html  fn.is_connected.html  fn.is_makeable.html  fn.main.html  (+27 more)
notebooks/: performance_plots.ipynb
src/: App.css  App.tsx  letter_input.tsx  playable_words.tsx  playable_words_list.tsx  playable_words_stats.tsx  results_display.tsx  settings.tsx  solution_time.tsx  types.ts  wrapper_controls.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  new_short_dictionary.txt  short_dictionary.txt  updated_short_dictionary.txt
(+833 files in other folders)
