[package]
name = "bananagrams_solver"
version = "1.3.0"
description = "A basic Bananagrams solver"
authors = ["William Watson"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4.1", features = [ "clipboard-read-text", "clipboard-write-text", "notification-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
hashbrown = "0.14.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
